parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMILLADOBLE
    COMILLASIMPLE
    ELSE
    ELSIF
    FALSE
    INTERROGACION
    MODULE
    NIL
    NOT
    RETURN

Grammar

Rule 0     S' -> base
Rule 1     base -> sentencias
Rule 2     base -> sentencias base
Rule 3     sentencias -> asignacion
Rule 4     sentencias -> append
Rule 5     sentencias -> split
Rule 6     sentencias -> puts
Rule 7     sentencias -> comentarios
Rule 8     sentencias -> sentIf
Rule 9     sentencias -> sentFor
Rule 10    sentencias -> sentWhile
Rule 11    sentencias -> unless
Rule 12    sentencias -> sentenciaBloque
Rule 13    sentencias -> sentenciaFuncion
Rule 14    sentencias -> pop
Rule 15    sentencias -> push
Rule 16    sentencias -> clear
Rule 17    sentencias -> operacionMat
<<<<<<< HEAD
Rule 18    asignacion -> variables IGUAL expresion
Rule 19    split -> CADENAS PUNTO SPLIT IZQPAREN DERPAREN
Rule 20    split -> CADENAS PUNTO SPLIT IZQPAREN CADENAS DERPAREN
Rule 21    split -> CADENAS PUNTO SPLIT IZQPAREN CADENAS COMA NUMERO DERPAREN
Rule 22    puts -> PUTS expresion
Rule 23    puts -> PUTS IZQPAREN expresion DERPAREN
Rule 24    puts -> PUTS IZQPAREN comparacion DERPAREN
Rule 25    print -> PRINT expresion
Rule 26    print -> PRINT IZQPAREN expresion DERPAREN
Rule 27    print -> PRINT IZQPAREN comparacion DERPAREN
Rule 28    comentarios -> COMENTARIO
Rule 29    append -> variables PUNTO APPEND IZQPAREN expresion DERPAREN
Rule 30    slice -> ARREGLOS PUNTO SLICE IZQPAREN NUMERO DERPAREN
Rule 31    slice -> variables PUNTO SLICE IZQPAREN NUMERO DERPAREN
Rule 32    slice -> variables PUNTO SLICE IZQPAREN NUMERO COMA NUMERO DERPAREN
Rule 33    slice -> ARREGLOS PUNTO SLICE IZQPAREN NUMERO COMA NUMERO DERPAREN
Rule 34    variables -> VGLOBALES
Rule 35    variables -> VLOCALES
Rule 36    variables -> VCLASE
Rule 37    variables -> VINSTANCIA
Rule 38    variables -> CONSTANTES
Rule 39    valor -> NUMERO
Rule 40    valor -> FLOTANTES
Rule 41    valor -> CADENAS
Rule 42    valor -> ARREGLOS
Rule 43    valor -> MAPAS
Rule 44    valor -> variables
Rule 45    expresion -> valor
Rule 46    comparacion -> expresion operadorComparador expresion
Rule 47    comparacion -> IZQPAREN expresion DERPAREN operadorComparador IZQPAREN expresion DERPAREN
Rule 48    operadorComparador -> IGUAL_COMP
Rule 49    operadorComparador -> DIFERENTE
Rule 50    operadorComparador -> MENOR
Rule 51    operadorComparador -> MAYOR
Rule 52    sentAnd -> comparacion AND comparacion
Rule 53    sentOr -> comparacion OR comparacion
Rule 54    comparaciones -> comparacion
Rule 55    comparaciones -> sentAnd
Rule 56    comparaciones -> sentOr
Rule 57    rango -> NUMERO RANGO NUMERO
Rule 58    sentBREAK -> BREAK
Rule 59    sentBREAK -> BREAK variables
Rule 60    sentIf -> IF comparaciones base finalIf
Rule 61    finalIf -> END
Rule 62    finalIf -> sentBREAK END
Rule 63    sentFor -> FOR variables IN rango DO base END
Rule 64    sentWhile -> WHILE comparacion DO base END
Rule 65    unless -> UNLESS comparacion base END
Rule 66    listas -> IZQ_CORCH expresion COMA expresion DER_CORCH
Rule 67    mapa -> IZQ_LLAVE expresion COMA expresion DER_LLAVE
Rule 68    sentenciaBloque -> BEGIN base END
Rule 69    sentenciaFuncion -> DEF variables base END
Rule 70    sentenciaFuncion -> DEF variables parametrosF base END
Rule 71    parametrosF -> IZQPAREN parametros DERPAREN
Rule 72    parametros -> variables COMA variables
Rule 73    parametros -> variables
Rule 74    parametros -> parametros COMA parametros
Rule 75    pop -> variables PUNTO POP IZQPAREN valor DERPAREN
Rule 76    pop -> variables PUNTO POP IZQPAREN DERPAREN
Rule 77    push -> variables PUNTO PUSH IZQPAREN valor DERPAREN
Rule 78    clear -> variables PUNTO PUSH IZQPAREN DERPAREN
Rule 79    operacionMat -> valor operadorMat valor
Rule 80    operacionMat -> IZQPAREN valor operadorMat expresion DERPAREN
Rule 81    operacionMat -> IZQPAREN valor operadorMat expresion DERPAREN operadorMat operacionMat
Rule 82    operacionMat -> valor operadorMat valor operadorMat operacionMat
Rule 83    operacionMat -> operacionMat operadorMat operacionMat
Rule 84    operadorMat -> MAS
Rule 85    operadorMat -> MENOS
Rule 86    operadorMat -> MULTIPLICACION
Rule 87    operadorMat -> DIVISION
Rule 88    operadorMat -> EXPONENCIAL
Rule 89    operadorMat -> MODULO

Terminals, with rules where they appear

AND                  : 52
APPEND               : 29
ARREGLOS             : 30 33 42
BEGIN                : 68
BREAK                : 58 59
CADENAS              : 19 20 20 21 21 41
COMA                 : 21 32 33 66 67 72 74
COMENTARIO           : 28
COMILLADOBLE         : 
COMILLASIMPLE        : 
CONSTANTES           : 38
DEF                  : 69 70
DERPAREN             : 19 20 21 23 24 26 27 29 30 31 32 33 47 47 71 75 76 77 78 80 81
DER_CORCH            : 66
DER_LLAVE            : 67
DIFERENTE            : 49
DIVISION             : 87
DO                   : 63 64
ELSE                 : 
ELSIF                : 
END                  : 61 62 63 64 65 68 69 70
EXPONENCIAL          : 88
FALSE                : 
FLOTANTES            : 40
FOR                  : 63
IF                   : 60
IGUAL                : 18
IGUAL_COMP           : 48
IN                   : 63
INTERROGACION        : 
IZQPAREN             : 19 20 21 23 24 26 27 29 30 31 32 33 47 47 71 75 76 77 78 80 81
IZQ_CORCH            : 66
IZQ_LLAVE            : 67
MAPAS                : 43
MAS                  : 84
MAYOR                : 51
MENOR                : 50
MENOS                : 85
MODULE               : 
MODULO               : 89
MULTIPLICACION       : 86
NIL                  : 
NOT                  : 
NUMERO               : 21 30 31 32 32 33 33 39 57 57
OR                   : 53
POP                  : 75 76
PRINT                : 25 26 27
PUNTO                : 19 20 21 29 30 31 32 33 75 76 77 78
PUSH                 : 77 78
PUTS                 : 22 23 24
RANGO                : 57
RETURN               : 
SLICE                : 30 31 32 33
SPLIT                : 19 20 21
UNLESS               : 65
VCLASE               : 36
VGLOBALES            : 34
VINSTANCIA           : 37
VLOCALES             : 35
WHILE                : 64
=======
Rule 18    sentencias -> slice
Rule 19    asignacion -> variables IGUAL expresion
Rule 20    split -> CADENAS PUNTO SPLIT IZQPAREN DERPAREN
Rule 21    split -> CADENAS PUNTO SPLIT IZQPAREN CADENAS DERPAREN
Rule 22    split -> CADENAS PUNTO SPLIT IZQPAREN CADENAS COMA NUMERO DERPAREN
Rule 23    puts -> PUTS expresion
Rule 24    puts -> PUTS IZQPAREN expresion DERPAREN
Rule 25    puts -> PUTS IZQPAREN comparacion DERPAREN
Rule 26    print -> PRINT expresion
Rule 27    print -> PRINT IZQPAREN expresion DERPAREN
Rule 28    print -> PRINT IZQPAREN comparacion DERPAREN
Rule 29    comentarios -> COMENTARIO
Rule 30    append -> variables PUNTO APPEND IZQPAREN expresion DERPAREN
Rule 31    slice -> ARREGLOS PUNTO SLICE IZQPAREN NUMERO DERPAREN
Rule 32    slice -> variables PUNTO SLICE IZQPAREN NUMERO DERPAREN
Rule 33    slice -> variables PUNTO SLICE IZQPAREN NUMERO COMA NUMERO DERPAREN
Rule 34    slice -> ARREGLOS PUNTO SLICE IZQPAREN NUMERO COMA NUMERO DERPAREN
Rule 35    variables -> VGLOBALES
Rule 36    variables -> VLOCALES
Rule 37    variables -> VCLASE
Rule 38    variables -> VINSTANCIA
Rule 39    variables -> CONSTANTES
Rule 40    valor -> NUMERO
Rule 41    valor -> FLOTANTES
Rule 42    valor -> CADENAS
Rule 43    valor -> ARREGLOS
Rule 44    valor -> MAPAS
Rule 45    valor -> variables
Rule 46    expresion -> valor
Rule 47    comparacion -> expresion operadorComparador expresion
Rule 48    comparacion -> IZQPAREN expresion DERPAREN operadorComparador IZQPAREN expresion DERPAREN
Rule 49    operadorComparador -> IGUAL_COMP
Rule 50    operadorComparador -> DIFERENTE
Rule 51    operadorComparador -> MENOR
Rule 52    operadorComparador -> MAYOR
Rule 53    sentAnd -> comparacion AND comparacion
Rule 54    sentOr -> comparacion OR comparacion
Rule 55    comparaciones -> comparacion
Rule 56    comparaciones -> sentAnd
Rule 57    comparaciones -> sentOr
Rule 58    rango -> NUMERO RANGO NUMERO
Rule 59    sentBREAK -> BREAK
Rule 60    sentBREAK -> BREAK variables
Rule 61    sentIf -> IF comparaciones base finalIf
Rule 62    finalIf -> END
Rule 63    finalIf -> sentBREAK END
Rule 64    sentFor -> FOR variables IN rango DO base END
Rule 65    sentWhile -> WHILE comparacion DO base END
Rule 66    unless -> UNLESS comparacion base END
Rule 67    listas -> IZQ_CORCH expresion COMA expresion DER_CORCH
Rule 68    mapa -> IZQ_LLAVE expresion COMA expresion DER_LLAVE
Rule 69    sentenciaBloque -> BEGIN base END
Rule 70    sentenciaFuncion -> DEF variables base END
Rule 71    sentenciaFuncion -> DEF variables parametrosF base END
Rule 72    parametrosF -> IZQPAREN parametros DERPAREN
Rule 73    parametros -> variables COMA variables
Rule 74    parametros -> variables
Rule 75    parametros -> parametros COMA parametros
Rule 76    pop -> variables PUNTO POP IZQPAREN valor DERPAREN
Rule 77    pop -> variables PUNTO POP IZQPAREN DERPAREN
Rule 78    push -> variables PUNTO PUSH IZQPAREN valor DERPAREN
Rule 79    clear -> variables PUNTO PUSH IZQPAREN DERPAREN
Rule 80    operacionMat -> valor operadorMat valor
Rule 81    operacionMat -> IZQPAREN valor operadorMat operacionMat DERPAREN
Rule 82    operadorMat -> MAS
Rule 83    operadorMat -> MENOS
Rule 84    operadorMat -> MULTIPLICACION
Rule 85    operadorMat -> DIVISION
Rule 86    operadorMat -> EXPONENCIAL
Rule 87    operadorMat -> MODULO

Terminals, with rules where they appear

AND                  : 53
APPEND               : 30
ARREGLOS             : 31 34 43
BEGIN                : 69
BREAK                : 59 60
CADENAS              : 20 21 21 22 22 42
COMA                 : 22 33 34 67 68 73 75
COMENTARIO           : 29
COMILLADOBLE         : 
COMILLASIMPLE        : 
CONSTANTES           : 39
DEF                  : 70 71
DERPAREN             : 20 21 22 24 25 27 28 30 31 32 33 34 48 48 72 76 77 78 79 81
DER_CORCH            : 67
DER_LLAVE            : 68
DIFERENTE            : 50
DIVISION             : 85
DO                   : 64 65
ELSE                 : 
ELSIF                : 
END                  : 62 63 64 65 66 69 70 71
EXPONENCIAL          : 86
FALSE                : 
FLOTANTES            : 41
FOR                  : 64
IF                   : 61
IGUAL                : 19
IGUAL_COMP           : 49
IN                   : 64
INTERROGACION        : 
IZQPAREN             : 20 21 22 24 25 27 28 30 31 32 33 34 48 48 72 76 77 78 79 81
IZQ_CORCH            : 67
IZQ_LLAVE            : 68
MAPAS                : 44
MAS                  : 82
MAYOR                : 52
MENOR                : 51
MENOS                : 83
MODULE               : 
MODULO               : 87
MULTIPLICACION       : 84
NIL                  : 
NOT                  : 
NUMERO               : 22 31 32 33 33 34 34 40 58 58
OR                   : 54
POP                  : 76 77
PRINT                : 26 27 28
PUNTO                : 20 21 22 30 31 32 33 34 76 77 78 79
PUSH                 : 78 79
PUTS                 : 23 24 25
RANGO                : 58
RETURN               : 
SLICE                : 31 32 33 34
SPLIT                : 20 21 22
UNLESS               : 66
VCLASE               : 37
VGLOBALES            : 35
VINSTANCIA           : 38
VLOCALES             : 36
WHILE                : 65
>>>>>>> 72b1883c755d71360a4c1427180514d3020646a2
error                : 

Nonterminals, with rules where they appear

append               : 4
asignacion           : 3
<<<<<<< HEAD
base                 : 2 60 63 64 65 68 69 70 0
clear                : 16
comentarios          : 7
comparacion          : 24 27 52 52 53 53 54 64 65
comparaciones        : 60
expresion            : 18 22 23 25 26 29 46 46 47 47 66 66 67 67 80 81
finalIf              : 60
listas               : 
mapa                 : 
operacionMat         : 17 81 82 83 83
operadorComparador   : 46 47
operadorMat          : 79 80 81 81 82 82 83
parametros           : 71 74 74
parametrosF          : 70
=======
base                 : 2 61 64 65 66 69 70 71 0
clear                : 16
comentarios          : 7
comparacion          : 25 28 53 53 54 54 55 65 66
comparaciones        : 61
expresion            : 19 23 24 26 27 30 47 47 48 48 67 67 68 68
finalIf              : 61
listas               : 
mapa                 : 
operacionMat         : 17 81
operadorComparador   : 47 48
operadorMat          : 80 81
parametros           : 72 75 75
parametrosF          : 71
>>>>>>> 72b1883c755d71360a4c1427180514d3020646a2
pop                  : 14
print                : 
push                 : 15
puts                 : 6
<<<<<<< HEAD
rango                : 63
sentAnd              : 55
sentBREAK            : 62
sentFor              : 9
sentIf               : 8
sentOr               : 56
=======
rango                : 64
sentAnd              : 56
sentBREAK            : 63
sentFor              : 9
sentIf               : 8
sentOr               : 57
>>>>>>> 72b1883c755d71360a4c1427180514d3020646a2
sentWhile            : 10
sentenciaBloque      : 12
sentenciaFuncion     : 13
sentencias           : 1 2
<<<<<<< HEAD
slice                : 
split                : 5
unless               : 11
valor                : 45 75 77 79 79 80 81 82 82
variables            : 18 29 31 32 44 59 63 69 70 72 72 73 75 76 77 78
=======
slice                : 18
split                : 5
unless               : 11
valor                : 46 76 78 80 80 81
variables            : 19 30 32 33 45 60 64 70 71 73 73 74 76 77 78 79
>>>>>>> 72b1883c755d71360a4c1427180514d3020646a2

Parsing method: LALR

state 0

    (0) S' -> . base
    (1) base -> . sentencias
    (2) base -> . sentencias base
    (3) sentencias -> . asignacion
    (4) sentencias -> . append
    (5) sentencias -> . split
    (6) sentencias -> . puts
    (7) sentencias -> . comentarios
    (8) sentencias -> . sentIf
    (9) sentencias -> . sentFor
    (10) sentencias -> . sentWhile
    (11) sentencias -> . unless
    (12) sentencias -> . sentenciaBloque
    (13) sentencias -> . sentenciaFuncion
    (14) sentencias -> . pop
    (15) sentencias -> . push
    (16) sentencias -> . clear
    (17) sentencias -> . operacionMat
<<<<<<< HEAD
    (18) asignacion -> . variables IGUAL expresion
    (29) append -> . variables PUNTO APPEND IZQPAREN expresion DERPAREN
    (19) split -> . CADENAS PUNTO SPLIT IZQPAREN DERPAREN
    (20) split -> . CADENAS PUNTO SPLIT IZQPAREN CADENAS DERPAREN
    (21) split -> . CADENAS PUNTO SPLIT IZQPAREN CADENAS COMA NUMERO DERPAREN
    (22) puts -> . PUTS expresion
    (23) puts -> . PUTS IZQPAREN expresion DERPAREN
    (24) puts -> . PUTS IZQPAREN comparacion DERPAREN
    (28) comentarios -> . COMENTARIO
    (60) sentIf -> . IF comparaciones base finalIf
    (63) sentFor -> . FOR variables IN rango DO base END
    (64) sentWhile -> . WHILE comparacion DO base END
    (65) unless -> . UNLESS comparacion base END
    (68) sentenciaBloque -> . BEGIN base END
    (69) sentenciaFuncion -> . DEF variables base END
    (70) sentenciaFuncion -> . DEF variables parametrosF base END
    (75) pop -> . variables PUNTO POP IZQPAREN valor DERPAREN
    (76) pop -> . variables PUNTO POP IZQPAREN DERPAREN
    (77) push -> . variables PUNTO PUSH IZQPAREN valor DERPAREN
    (78) clear -> . variables PUNTO PUSH IZQPAREN DERPAREN
    (79) operacionMat -> . valor operadorMat valor
    (80) operacionMat -> . IZQPAREN valor operadorMat expresion DERPAREN
    (81) operacionMat -> . IZQPAREN valor operadorMat expresion DERPAREN operadorMat operacionMat
    (82) operacionMat -> . valor operadorMat valor operadorMat operacionMat
    (83) operacionMat -> . operacionMat operadorMat operacionMat
    (34) variables -> . VGLOBALES
    (35) variables -> . VLOCALES
    (36) variables -> . VCLASE
    (37) variables -> . VINSTANCIA
    (38) variables -> . CONSTANTES
    (39) valor -> . NUMERO
    (40) valor -> . FLOTANTES
    (41) valor -> . CADENAS
    (42) valor -> . ARREGLOS
    (43) valor -> . MAPAS
    (44) valor -> . variables

    CADENAS         shift and go to state 20
    PUTS            shift and go to state 22
    COMENTARIO      shift and go to state 23
    IF              shift and go to state 24
    FOR             shift and go to state 25
    WHILE           shift and go to state 26
    UNLESS          shift and go to state 27
    BEGIN           shift and go to state 28
    DEF             shift and go to state 29
    IZQPAREN        shift and go to state 19
    VGLOBALES       shift and go to state 31
    VLOCALES        shift and go to state 32
    VCLASE          shift and go to state 33
    VINSTANCIA      shift and go to state 34
    CONSTANTES      shift and go to state 35
    NUMERO          shift and go to state 21
    FLOTANTES       shift and go to state 36
    ARREGLOS        shift and go to state 37
    MAPAS           shift and go to state 38
=======
    (18) sentencias -> . slice
    (19) asignacion -> . variables IGUAL expresion
    (30) append -> . variables PUNTO APPEND IZQPAREN expresion DERPAREN
    (20) split -> . CADENAS PUNTO SPLIT IZQPAREN DERPAREN
    (21) split -> . CADENAS PUNTO SPLIT IZQPAREN CADENAS DERPAREN
    (22) split -> . CADENAS PUNTO SPLIT IZQPAREN CADENAS COMA NUMERO DERPAREN
    (23) puts -> . PUTS expresion
    (24) puts -> . PUTS IZQPAREN expresion DERPAREN
    (25) puts -> . PUTS IZQPAREN comparacion DERPAREN
    (29) comentarios -> . COMENTARIO
    (61) sentIf -> . IF comparaciones base finalIf
    (64) sentFor -> . FOR variables IN rango DO base END
    (65) sentWhile -> . WHILE comparacion DO base END
    (66) unless -> . UNLESS comparacion base END
    (69) sentenciaBloque -> . BEGIN base END
    (70) sentenciaFuncion -> . DEF variables base END
    (71) sentenciaFuncion -> . DEF variables parametrosF base END
    (76) pop -> . variables PUNTO POP IZQPAREN valor DERPAREN
    (77) pop -> . variables PUNTO POP IZQPAREN DERPAREN
    (78) push -> . variables PUNTO PUSH IZQPAREN valor DERPAREN
    (79) clear -> . variables PUNTO PUSH IZQPAREN DERPAREN
    (80) operacionMat -> . valor operadorMat valor
    (81) operacionMat -> . IZQPAREN valor operadorMat operacionMat DERPAREN
    (31) slice -> . ARREGLOS PUNTO SLICE IZQPAREN NUMERO DERPAREN
    (32) slice -> . variables PUNTO SLICE IZQPAREN NUMERO DERPAREN
    (33) slice -> . variables PUNTO SLICE IZQPAREN NUMERO COMA NUMERO DERPAREN
    (34) slice -> . ARREGLOS PUNTO SLICE IZQPAREN NUMERO COMA NUMERO DERPAREN
    (35) variables -> . VGLOBALES
    (36) variables -> . VLOCALES
    (37) variables -> . VCLASE
    (38) variables -> . VINSTANCIA
    (39) variables -> . CONSTANTES
    (40) valor -> . NUMERO
    (41) valor -> . FLOTANTES
    (42) valor -> . CADENAS
    (43) valor -> . ARREGLOS
    (44) valor -> . MAPAS
    (45) valor -> . variables

    CADENAS         shift and go to state 21
    PUTS            shift and go to state 23
    COMENTARIO      shift and go to state 24
    IF              shift and go to state 25
    FOR             shift and go to state 26
    WHILE           shift and go to state 27
    UNLESS          shift and go to state 28
    BEGIN           shift and go to state 29
    DEF             shift and go to state 30
    IZQPAREN        shift and go to state 20
    ARREGLOS        shift and go to state 32
    VGLOBALES       shift and go to state 33
    VLOCALES        shift and go to state 34
    VCLASE          shift and go to state 35
    VINSTANCIA      shift and go to state 36
    CONSTANTES      shift and go to state 37
    NUMERO          shift and go to state 22
    FLOTANTES       shift and go to state 38
    MAPAS           shift and go to state 39
>>>>>>> 72b1883c755d71360a4c1427180514d3020646a2

    base                           shift and go to state 1
    sentencias                     shift and go to state 2
    asignacion                     shift and go to state 3
    append                         shift and go to state 4
    split                          shift and go to state 5
    puts                           shift and go to state 6
    comentarios                    shift and go to state 7
    sentIf                         shift and go to state 8
    sentFor                        shift and go to state 9
    sentWhile                      shift and go to state 10
    unless                         shift and go to state 11
    sentenciaBloque                shift and go to state 12
    sentenciaFuncion               shift and go to state 13
    pop                            shift and go to state 14
    push                           shift and go to state 15
    clear                          shift and go to state 16
    operacionMat                   shift and go to state 17
    slice                          shift and go to state 18
    variables                      shift and go to state 19
    valor                          shift and go to state 31

state 1

    (0) S' -> base .



state 2

    (1) base -> sentencias .
    (2) base -> sentencias . base
    (1) base -> . sentencias
    (2) base -> . sentencias base
    (3) sentencias -> . asignacion
    (4) sentencias -> . append
    (5) sentencias -> . split
    (6) sentencias -> . puts
    (7) sentencias -> . comentarios
    (8) sentencias -> . sentIf
    (9) sentencias -> . sentFor
    (10) sentencias -> . sentWhile
    (11) sentencias -> . unless
    (12) sentencias -> . sentenciaBloque
    (13) sentencias -> . sentenciaFuncion
    (14) sentencias -> . pop
    (15) sentencias -> . push
    (16) sentencias -> . clear
    (17) sentencias -> . operacionMat
<<<<<<< HEAD
    (18) asignacion -> . variables IGUAL expresion
    (29) append -> . variables PUNTO APPEND IZQPAREN expresion DERPAREN
    (19) split -> . CADENAS PUNTO SPLIT IZQPAREN DERPAREN
    (20) split -> . CADENAS PUNTO SPLIT IZQPAREN CADENAS DERPAREN
    (21) split -> . CADENAS PUNTO SPLIT IZQPAREN CADENAS COMA NUMERO DERPAREN
    (22) puts -> . PUTS expresion
    (23) puts -> . PUTS IZQPAREN expresion DERPAREN
    (24) puts -> . PUTS IZQPAREN comparacion DERPAREN
    (28) comentarios -> . COMENTARIO
    (60) sentIf -> . IF comparaciones base finalIf
    (63) sentFor -> . FOR variables IN rango DO base END
    (64) sentWhile -> . WHILE comparacion DO base END
    (65) unless -> . UNLESS comparacion base END
    (68) sentenciaBloque -> . BEGIN base END
    (69) sentenciaFuncion -> . DEF variables base END
    (70) sentenciaFuncion -> . DEF variables parametrosF base END
    (75) pop -> . variables PUNTO POP IZQPAREN valor DERPAREN
    (76) pop -> . variables PUNTO POP IZQPAREN DERPAREN
    (77) push -> . variables PUNTO PUSH IZQPAREN valor DERPAREN
    (78) clear -> . variables PUNTO PUSH IZQPAREN DERPAREN
    (79) operacionMat -> . valor operadorMat valor
    (80) operacionMat -> . IZQPAREN valor operadorMat expresion DERPAREN
    (81) operacionMat -> . IZQPAREN valor operadorMat expresion DERPAREN operadorMat operacionMat
    (82) operacionMat -> . valor operadorMat valor operadorMat operacionMat
    (83) operacionMat -> . operacionMat operadorMat operacionMat
    (34) variables -> . VGLOBALES
    (35) variables -> . VLOCALES
    (36) variables -> . VCLASE
    (37) variables -> . VINSTANCIA
    (38) variables -> . CONSTANTES
    (39) valor -> . NUMERO
    (40) valor -> . FLOTANTES
    (41) valor -> . CADENAS
    (42) valor -> . ARREGLOS
    (43) valor -> . MAPAS
    (44) valor -> . variables
=======
    (18) sentencias -> . slice
    (19) asignacion -> . variables IGUAL expresion
    (30) append -> . variables PUNTO APPEND IZQPAREN expresion DERPAREN
    (20) split -> . CADENAS PUNTO SPLIT IZQPAREN DERPAREN
    (21) split -> . CADENAS PUNTO SPLIT IZQPAREN CADENAS DERPAREN
    (22) split -> . CADENAS PUNTO SPLIT IZQPAREN CADENAS COMA NUMERO DERPAREN
    (23) puts -> . PUTS expresion
    (24) puts -> . PUTS IZQPAREN expresion DERPAREN
    (25) puts -> . PUTS IZQPAREN comparacion DERPAREN
    (29) comentarios -> . COMENTARIO
    (61) sentIf -> . IF comparaciones base finalIf
    (64) sentFor -> . FOR variables IN rango DO base END
    (65) sentWhile -> . WHILE comparacion DO base END
    (66) unless -> . UNLESS comparacion base END
    (69) sentenciaBloque -> . BEGIN base END
    (70) sentenciaFuncion -> . DEF variables base END
    (71) sentenciaFuncion -> . DEF variables parametrosF base END
    (76) pop -> . variables PUNTO POP IZQPAREN valor DERPAREN
    (77) pop -> . variables PUNTO POP IZQPAREN DERPAREN
    (78) push -> . variables PUNTO PUSH IZQPAREN valor DERPAREN
    (79) clear -> . variables PUNTO PUSH IZQPAREN DERPAREN
    (80) operacionMat -> . valor operadorMat valor
    (81) operacionMat -> . IZQPAREN valor operadorMat operacionMat DERPAREN
    (31) slice -> . ARREGLOS PUNTO SLICE IZQPAREN NUMERO DERPAREN
    (32) slice -> . variables PUNTO SLICE IZQPAREN NUMERO DERPAREN
    (33) slice -> . variables PUNTO SLICE IZQPAREN NUMERO COMA NUMERO DERPAREN
    (34) slice -> . ARREGLOS PUNTO SLICE IZQPAREN NUMERO COMA NUMERO DERPAREN
    (35) variables -> . VGLOBALES
    (36) variables -> . VLOCALES
    (37) variables -> . VCLASE
    (38) variables -> . VINSTANCIA
    (39) variables -> . CONSTANTES
    (40) valor -> . NUMERO
    (41) valor -> . FLOTANTES
    (42) valor -> . CADENAS
    (43) valor -> . ARREGLOS
    (44) valor -> . MAPAS
    (45) valor -> . variables
>>>>>>> 72b1883c755d71360a4c1427180514d3020646a2

    $end            reduce using rule 1 (base -> sentencias .)
    END             reduce using rule 1 (base -> sentencias .)
    BREAK           reduce using rule 1 (base -> sentencias .)
    CADENAS         shift and go to state 21
    PUTS            shift and go to state 23
    COMENTARIO      shift and go to state 24
    IF              shift and go to state 25
    FOR             shift and go to state 26
    WHILE           shift and go to state 27
    UNLESS          shift and go to state 28
    BEGIN           shift and go to state 29
    DEF             shift and go to state 30
    IZQPAREN        shift and go to state 20
    ARREGLOS        shift and go to state 32
    VGLOBALES       shift and go to state 33
    VLOCALES        shift and go to state 34
    VCLASE          shift and go to state 35
    VINSTANCIA      shift and go to state 36
    CONSTANTES      shift and go to state 37
    NUMERO          shift and go to state 22
    FLOTANTES       shift and go to state 38
    MAPAS           shift and go to state 39

    sentencias                     shift and go to state 2
    base                           shift and go to state 40
    asignacion                     shift and go to state 3
    append                         shift and go to state 4
    split                          shift and go to state 5
    puts                           shift and go to state 6
    comentarios                    shift and go to state 7
    sentIf                         shift and go to state 8
    sentFor                        shift and go to state 9
    sentWhile                      shift and go to state 10
    unless                         shift and go to state 11
    sentenciaBloque                shift and go to state 12
    sentenciaFuncion               shift and go to state 13
    pop                            shift and go to state 14
    push                           shift and go to state 15
    clear                          shift and go to state 16
    operacionMat                   shift and go to state 17
    slice                          shift and go to state 18
    variables                      shift and go to state 19
    valor                          shift and go to state 31

state 3

    (3) sentencias -> asignacion .

    CADENAS         reduce using rule 3 (sentencias -> asignacion .)
    PUTS            reduce using rule 3 (sentencias -> asignacion .)
    COMENTARIO      reduce using rule 3 (sentencias -> asignacion .)
    IF              reduce using rule 3 (sentencias -> asignacion .)
    FOR             reduce using rule 3 (sentencias -> asignacion .)
    WHILE           reduce using rule 3 (sentencias -> asignacion .)
    UNLESS          reduce using rule 3 (sentencias -> asignacion .)
    BEGIN           reduce using rule 3 (sentencias -> asignacion .)
    DEF             reduce using rule 3 (sentencias -> asignacion .)
    IZQPAREN        reduce using rule 3 (sentencias -> asignacion .)
    ARREGLOS        reduce using rule 3 (sentencias -> asignacion .)
    VGLOBALES       reduce using rule 3 (sentencias -> asignacion .)
    VLOCALES        reduce using rule 3 (sentencias -> asignacion .)
    VCLASE          reduce using rule 3 (sentencias -> asignacion .)
    VINSTANCIA      reduce using rule 3 (sentencias -> asignacion .)
    CONSTANTES      reduce using rule 3 (sentencias -> asignacion .)
    NUMERO          reduce using rule 3 (sentencias -> asignacion .)
    FLOTANTES       reduce using rule 3 (sentencias -> asignacion .)
    MAPAS           reduce using rule 3 (sentencias -> asignacion .)
    $end            reduce using rule 3 (sentencias -> asignacion .)
    END             reduce using rule 3 (sentencias -> asignacion .)
    BREAK           reduce using rule 3 (sentencias -> asignacion .)


state 4

    (4) sentencias -> append .

    CADENAS         reduce using rule 4 (sentencias -> append .)
    PUTS            reduce using rule 4 (sentencias -> append .)
    COMENTARIO      reduce using rule 4 (sentencias -> append .)
    IF              reduce using rule 4 (sentencias -> append .)
    FOR             reduce using rule 4 (sentencias -> append .)
    WHILE           reduce using rule 4 (sentencias -> append .)
    UNLESS          reduce using rule 4 (sentencias -> append .)
    BEGIN           reduce using rule 4 (sentencias -> append .)
    DEF             reduce using rule 4 (sentencias -> append .)
    IZQPAREN        reduce using rule 4 (sentencias -> append .)
    ARREGLOS        reduce using rule 4 (sentencias -> append .)
    VGLOBALES       reduce using rule 4 (sentencias -> append .)
    VLOCALES        reduce using rule 4 (sentencias -> append .)
    VCLASE          reduce using rule 4 (sentencias -> append .)
    VINSTANCIA      reduce using rule 4 (sentencias -> append .)
    CONSTANTES      reduce using rule 4 (sentencias -> append .)
    NUMERO          reduce using rule 4 (sentencias -> append .)
    FLOTANTES       reduce using rule 4 (sentencias -> append .)
    MAPAS           reduce using rule 4 (sentencias -> append .)
    $end            reduce using rule 4 (sentencias -> append .)
    END             reduce using rule 4 (sentencias -> append .)
    BREAK           reduce using rule 4 (sentencias -> append .)


state 5

    (5) sentencias -> split .

    CADENAS         reduce using rule 5 (sentencias -> split .)
    PUTS            reduce using rule 5 (sentencias -> split .)
    COMENTARIO      reduce using rule 5 (sentencias -> split .)
    IF              reduce using rule 5 (sentencias -> split .)
    FOR             reduce using rule 5 (sentencias -> split .)
    WHILE           reduce using rule 5 (sentencias -> split .)
    UNLESS          reduce using rule 5 (sentencias -> split .)
    BEGIN           reduce using rule 5 (sentencias -> split .)
    DEF             reduce using rule 5 (sentencias -> split .)
    IZQPAREN        reduce using rule 5 (sentencias -> split .)
    ARREGLOS        reduce using rule 5 (sentencias -> split .)
    VGLOBALES       reduce using rule 5 (sentencias -> split .)
    VLOCALES        reduce using rule 5 (sentencias -> split .)
    VCLASE          reduce using rule 5 (sentencias -> split .)
    VINSTANCIA      reduce using rule 5 (sentencias -> split .)
    CONSTANTES      reduce using rule 5 (sentencias -> split .)
    NUMERO          reduce using rule 5 (sentencias -> split .)
    FLOTANTES       reduce using rule 5 (sentencias -> split .)
    MAPAS           reduce using rule 5 (sentencias -> split .)
    $end            reduce using rule 5 (sentencias -> split .)
    END             reduce using rule 5 (sentencias -> split .)
    BREAK           reduce using rule 5 (sentencias -> split .)


state 6

    (6) sentencias -> puts .
